Made score increase slowly